Added exception component to composer

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": "^7.1.0",
         "erusev/parsedown": "^1.6",
-        "osflab/stream": "~3.0.0"
+        "osflab/stream": "~3.0.0",
+        "osflab/exception": "~3.0.0"
     },
     "require-dev": {
         "osflab/test": "~3.0.0"
