Components refactorings & composer updates

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
     "require-dev": {
         "osflab/test": "~3.0.0"
     },
+    "suggest": {
+        "osflab/view": "~3.0.0",
+        "osflab/application": "~3.0.0"
+    },
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
