--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require": {
         "php": "^7.1.0",
-        "osflab/stream": "~3.0.0"
+        "osflab/stream": "~3.0.0",
+        "osflab/exception": "~3.0.0"
     },
     "require-dev": {
         "osflab/test": "~3.0.0"
