--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "source": "https://github.com/osflab/config"
     },
     "require": {
-        "php": "^7.1.0"
+        "php": "^7.1.0",
+        "osflab/exception": "~3.0.0",
+        "osflab/stream": "~3.0.0"
     },
     "require-dev": {
         "osflab/test": "~3.0.0"
