--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": "^7.1.0",
         "mobiledetect/mobiledetectlib": "^2.8",
+        "osflab/container": "~3.0.0",
         "osflab/exception": "~3.0.0"
     },
     "minimum-stability": "dev",
