--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,41 @@
         "source": "https://github.com/osflab/exception"
     },
     "require": {
-        "php": "^7.1.0"
+        "php": "^7.1.0",
+        "osflab/container": "~3.0.0",
+        "osflab/controller": "~3.0.0",
+        "osflab/log": "~3.0.0"
     },
     "require-dev": {
         "osflab/test": "~3.0.0"
+    },
+    "provide": {
+        "osflab/application": "3.0.0",
+        "osflab/bean": "3.0.0",
+        "osflab/cache": "3.0.0",
+        "osflab/config": "3.0.0",
+        "osflab/console": "3.0.0",
+        "osflab/container": "3.0.0",
+        "osflab/controller": "3.0.0",
+        "osflab/crypt": "3.0.0",
+        "osflab/db": "3.0.0",
+        "osflab/device": "3.0.0",
+        "osflab/doc-maker": "3.0.0",
+        "osflab/filter": "3.0.0",
+        "osflab/form": "3.0.0",
+        "osflab/generator": "3.0.0",
+        "osflab/helper": "3.0.0",
+        "osflab/image": "3.0.0",
+        "osflab/log": "3.0.0",
+        "osflab/navigation": "3.0.0",
+        "osflab/office": "3.0.0",
+        "osflab/pdf": "3.0.0",
+        "osflab/safety": "3.0.0",
+        "osflab/session": "3.0.0",
+        "osflab/stream": "3.0.0",
+        "osflab/test": "3.0.0",
+        "osflab/validator": "3.0.0",
+        "osflab/view": "3.0.0"
     },
     "suggest": {
         "osflab/view": "~3.0.0",
