--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
     "require-dev": {
         "osflab/test": "~3.0.0"
     },
+    "provide": {
+        "osflab/form": "3.0.0"
+    },
     "suggest": {
         "osflab/stream": "For phraseCleaner and UcPhrase",
         "osflab/generator": "For the Filter quick access helper"
