--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
     "require": {
         "php": "^7.1.0",
         "ext-imagick": "*",
-        "osflab/exception": "~3.0.0"
+        "osflab/exception": "~3.0.0",
+        "osflab/container": "~3.0.0"
     },
     "suggest": {
+        "osflab/application": "~3.0.0",
         "osflab/log": "~3.0.0"
     },
     "minimum-stability": "dev",
