--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,10 @@
     "require-dev": {
         "osflab/test": "~3.0.0"
     },
+    "provide": {
+        "osflab/exception": "3.0.0",
+        "osflab/safety": "3.0.0"
+    },
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
