--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "php": "^7.1.0",
         "mobiledetect/mobiledetectlib": "^2.8",
         "osflab/container": "~3.0.0",
+        "osflab/session": "~3.0.0",
         "osflab/exception": "~3.0.0"
     },
     "minimum-stability": "dev",
