--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": "^7.1.0",
         "zendframework/zend-filter": "~2.7.2",
-        "osflab/exception": "~3.0.0"
+        "osflab/exception": "~3.0.0",
+        "osflab/stream": "~3.0.0"
     },
     "require-dev": {
         "osflab/test": "~3.0.0"
@@ -26,7 +27,6 @@
         "osflab/form": "3.0.0"
     },
     "suggest": {
-        "osflab/stream": "For phraseCleaner and UcPhrase",
         "osflab/generator": "For the Filter quick access helper"
     },
     "minimum-stability": "dev",
