--- a/composer.json
+++ b/composer.json
@@ -16,19 +16,21 @@
     },
     "require": {
         "php": "^7.1.0",
-        "zendframework/zend-db": "^2.9",
-        "zendframework/zend-code": "^3.3",
-        "zendframework/zend-filter": "~2.7.2",
-        "zendframework/zend-validator": "~2.10.2",
-        "zendframework/zend-form": "^2.11",
-        "zendframework/zend-view": "^2.10",
         "osflab/exception": "~3.0.0",
         "osflab/stream": "~3.0.0"
+    },
+    "require-dev": {
+        "zendframework/zend-code": "^3.3"
     },
     "provide": {
         "osflab/controller": "3.0.0"
     },
     "suggest": {
+        "zendframework/zend-db": "^2.9",
+        "zendframework/zend-filter": "~2.7.2",
+        "zendframework/zend-validator": "~2.10.2",
+        "zendframework/zend-form": "^2.11",
+        "zendframework/zend-view": "^2.10",
         "osflab/filter": "Filters generation",
         "osflab/validator": "Validators generation",
         "osflab/view": "View helpers generation",
