--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "suggest": {
         "osflab/view": "~3.0.0",
-        "zendframework/zend-db": "^2.9"
+        "zendframework/zend-db": "~2.9.2"
     },
     "minimum-stability": "dev",
     "autoload": {
