--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     },
     "require": {
         "php": "^7.1.0",
-        "zendframework/zend-db": "^2.9",
-        "zendframework/zend-i18n": "^2.7",
-        "zendframework/zend-i18n-resources": "^2.5",
-        "zendframework/zend-validator": "~2.10.2",
+        "zendframework/zend-db": "~2.9.2",
+        "zendframework/zend-i18n": "~2.7.4",
+        "zendframework/zend-i18n-resources": "^2.5.2",
+        "zendframework/zend-validator": "2.10.2",
         "zendframework/zend-hydrator": "~2.3.1",
         "osflab/exception": "~3.0.0",
         "osflab/container": "~3.0.0",
