--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "^7.1.0",
-        "erusev/parsedown": "^1.6",
+        "erusev/parsedown": "~1.6.4",
         "osflab/stream": "~3.0.0",
         "osflab/exception": "~3.0.0",
         "osflab/container": "~3.0.0"
