More accurate dependency versions in composer configuration

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "^7.1.0",
-        "zendframework/zend-filter": "~2.7.2",
+        "zendframework/zend-filter": "2.7.2",
         "osflab/exception": "~3.0.0",
         "osflab/stream": "~3.0.0"
     },
