--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     },
     "require": {
         "php": "^7.1.0",
-        "zendframework/zend-filter": "~2.7.2",
-        "zendframework/zend-validator": "~2.10.2",
+        "zendframework/zend-filter": "2.7.2",
+        "zendframework/zend-validator": "2.10.2",
         "osflab/filter": "~3.0.0",
         "osflab/validator": "~3.0.0",
         "osflab/stream": "~3.0.0",
