--- a/composer.json
+++ b/composer.json
@@ -20,17 +20,18 @@
         "osflab/stream": "~3.0.0"
     },
     "require-dev": {
-        "zendframework/zend-code": "^3.3"
+        "zendframework/zend-code": "~3.3.0"
     },
     "provide": {
-        "osflab/controller": "3.0.0"
+        "osflab/controller": "3.0.0",
+        "osflab/validator": "3.0.0"
     },
     "suggest": {
-        "zendframework/zend-db": "^2.9",
-        "zendframework/zend-filter": "~2.7.2",
-        "zendframework/zend-validator": "~2.10.2",
+        "zendframework/zend-db": "~2.9.2",
+        "zendframework/zend-filter": "2.7.2",
+        "zendframework/zend-validator": "2.10.2",
         "zendframework/zend-form": "^2.11",
-        "zendframework/zend-view": "^2.10",
+        "zendframework/zend-view": "~2.10.0",
         "osflab/filter": "Filters generation",
         "osflab/validator": "Validators generation",
         "osflab/view": "View helpers generation",
