--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "^7.1.0",
-        "mobiledetect/mobiledetectlib": "^2.8",
+        "mobiledetect/mobiledetectlib": "~2.8.30",
         "osflab/application": "~3.0.0",
         "osflab/view": "~3.0.0",
         "osflab/container": "~3.0.0",
