--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "php": "^7.1.0",
         "ext-redis": "*",
         "phpoffice/phpspreadsheet": "~1.1.0",
-        "cache/redis-adapter": "^1.0",
-        "cache/simple-cache-bridge": "^1.0",
+        "cache/redis-adapter": "~1.0",
+        "cache/simple-cache-bridge": "~1.0",
         "osflab/exception": "~3.0.0",
         "osflab/container": "~3.0.0",
         "osflab/cache": "~3.0.0"
