Composer external depends minimum stability = stable

--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,7 @@
         "zendframework/ZendPdf": "If you want to use this deprecated feature",
         "zendframework/zend-authentication": "~2.5.3"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Osf\\": "src"
