--- a/src/Generator/composer.json
+++ b/src/Generator/composer.json
@@ -38,7 +38,7 @@
         "osflab/container": "App config detection",
         "osflab/application": "App config detection"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Osf\\Generator\\": ""
