--- a/src/Navigation/composer.json
+++ b/src/Navigation/composer.json
@@ -28,7 +28,7 @@
     "require-dev": {
         "osflab/test": "~3.0.0"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Osf\\Navigation\\": ""
