--- a/src/Config/composer.json
+++ b/src/Config/composer.json
@@ -26,7 +26,7 @@
         "osflab/form": "~3.0.0",
         "osflab/db": "~3.0.0"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Osf\\Config\\": ""
