--- a/src/Console/composer.json
+++ b/src/Console/composer.json
@@ -24,7 +24,7 @@
         "osflab/controller": "3.0.0",
         "osflab/test": "3.0.0"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Osf\\Console\\": ""
