--- a/src/Controller/composer.json
+++ b/src/Controller/composer.json
@@ -34,7 +34,7 @@
         "osflab/view": "~3.0.0",
         "zendframework/zend-db": "~2.9.2"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Osf\\Controller\\": ""
