--- a/src/Exception/composer.json
+++ b/src/Exception/composer.json
@@ -53,7 +53,7 @@
         "osflab/view": "~3.0.0",
         "osflab/application": "~3.0.0"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Osf\\Exception\\": ""
