--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "patchwork/utf8": "~1.3.1",
         "php": "^7.1.0",
         "phpoffice/phpspreadsheet": "~1.1.0",
+        "psr/simple-cache": "~1.0.0",
         "soundasleep/html2text": "~0.5.0",
         "symfony/yaml": "~3.4.4",
         "tecnickcom/tcpdf": "~6.2.13",
