--- a/src/Bean/composer.json
+++ b/src/Bean/composer.json
@@ -27,7 +27,7 @@
         "osflab/container": "~3.0.0",
         "osflab/doc-maker": "~3.0.0"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Osf\\Bean\\": ""
