--- a/src/Controller/composer.json
+++ b/src/Controller/composer.json
@@ -32,9 +32,9 @@
     },
     "suggest": {
         "osflab/view": "~3.0.0",
-        "zendframework/zend-db": "~2.9.2"
+        "zendframework/zend-db": "2.9.2"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Osf\\Controller\\": ""
