--- a/src/Generator/composer.json
+++ b/src/Generator/composer.json
@@ -20,25 +20,25 @@
         "osflab/stream": "~3.0.0"
     },
     "require-dev": {
-        "zendframework/zend-code": "~3.3.0"
+        "zendframework/zend-code": "3.3.0"
     },
     "provide": {
         "osflab/controller": "3.0.0",
         "osflab/validator": "3.0.0"
     },
     "suggest": {
-        "zendframework/zend-db": "~2.9.2",
+        "zendframework/zend-db": "2.9.2",
         "zendframework/zend-filter": "2.7.2",
         "zendframework/zend-validator": "2.10.2",
-        "zendframework/zend-form": "^2.11",
-        "zendframework/zend-view": "~2.10.0",
+        "zendframework/zend-form": "2.11",
+        "zendframework/zend-view": "2.10.0",
         "osflab/filter": "Filters generation",
         "osflab/validator": "Validators generation",
         "osflab/view": "View helpers generation",
         "osflab/container": "App config detection",
         "osflab/application": "App config detection"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Osf\\Generator\\": ""
