--- a/src/Navigation/composer.json
+++ b/src/Navigation/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "^7.1.0",
-        "mobiledetect/mobiledetectlib": "~2.8.30",
+        "mobiledetect/mobiledetectlib": "2.8.30",
         "osflab/application": "~3.0.0",
         "osflab/view": "~3.0.0",
         "osflab/container": "~3.0.0",
@@ -28,7 +28,7 @@
     "require-dev": {
         "osflab/test": "~3.0.0"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Osf\\Navigation\\": ""
