--- a/src/Stream/composer.json
+++ b/src/Stream/composer.json
@@ -17,9 +17,9 @@
     "require": {
         "php": "^7.1.0",
         "ext-mbstring": "*",
-        "soundasleep/html2text": "~0.5.0",
-        "patchwork/utf8": "~1.3.1",
-        "symfony/yaml": "~3.4.4",
+        "soundasleep/html2text": "0.5.0",
+        "patchwork/utf8": "1.3.1",
+        "symfony/yaml": "3.4.4",
         "osflab/exception": "~3.0.0",
         "osflab/crypt": "~3.0.0",
         "osflab/container": "~3.0.0"
@@ -44,7 +44,7 @@
         "osflab/cache": "~3.0.0",
         "ext-yaml": "For better performances"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Osf\\Stream\\": ""
