--- a/src/Generator/composer.json
+++ b/src/Generator/composer.json
@@ -39,6 +39,7 @@
         "osflab/application": "App config detection"
     },
     "minimum-stability": "dev",
+    "prefer-stable": "true",
     "autoload": {
         "psr-4": {
             "Osf\\Generator\\": ""
