--- a/src/Navigation/composer.json
+++ b/src/Navigation/composer.json
@@ -29,6 +29,7 @@
         "osflab/test": "~3.0.0"
     },
     "minimum-stability": "dev",
+    "prefer-stable": "true",
     "autoload": {
         "psr-4": {
             "Osf\\Navigation\\": ""
