--- a/src/Stream/composer.json
+++ b/src/Stream/composer.json
@@ -48,6 +48,7 @@
         "ext-yaml": "For better performances"
     },
     "minimum-stability": "dev",
+    "prefer-stable": "true",
     "autoload": {
         "psr-4": {
             "Osf\\Stream\\": ""
