--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ services:
     - redis-server
 
 before_install:
+    - pear config-set preferred_state beta
+    - pecl channel-update pecl.php.net
+    - yes | pecl install imagick
     - |
-      stty cols 120
       export COMPOSER_UP='composer update --no-progress --no-suggest --ansi'
       export OSF_TESTS='bin/runtests'
       INI=~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
