--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "erusev/parsedown": "1.6.4",
         "ext-imagick": "*",
         "ext-mbstring": "*",
-        "ext-mcrypt": "*",
+        "ext-openssl": "*",
         "ext-redis": "*",
         "mobiledetect/mobiledetectlib": "2.8.30",
         "patchwork/utf8": "1.3.1",
