--- a/src/Bean/composer.json
+++ b/src/Bean/composer.json
@@ -28,7 +28,7 @@
         "osflab/doc-maker": "~3.0.0"
     },
     "minimum-stability": "dev",
-    "prefer-stable": "true",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Osf\\Bean\\": ""
