--- a/src/Config/composer.json
+++ b/src/Config/composer.json
@@ -27,7 +27,7 @@
         "osflab/db": "~3.0.0"
     },
     "minimum-stability": "dev",
-    "prefer-stable": "true",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Osf\\Config\\": ""
