--- a/src/Console/composer.json
+++ b/src/Console/composer.json
@@ -25,7 +25,7 @@
         "osflab/test": "3.0.0"
     },
     "minimum-stability": "dev",
-    "prefer-stable": "true",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Osf\\Console\\": ""
