--- a/src/Controller/composer.json
+++ b/src/Controller/composer.json
@@ -35,7 +35,7 @@
         "zendframework/zend-db": "2.9.2"
     },
     "minimum-stability": "dev",
-    "prefer-stable": "true",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Osf\\Controller\\": ""
