--- a/src/Exception/composer.json
+++ b/src/Exception/composer.json
@@ -54,7 +54,7 @@
         "osflab/application": "~3.0.0"
     },
     "minimum-stability": "dev",
-    "prefer-stable": "true",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Osf\\Exception\\": ""
