--- a/src/Bean/composer.json
+++ b/src/Bean/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "osflab/bean",
     "description": "OSF bean component",
+    "version": "3.0.0",
     "type": "library",
     "homepage": "https://github.com/osflab/bean",
     "license": "AGPL-3.0-or-later",
