--- a/src/Stream/composer.json
+++ b/src/Stream/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "osflab/stream",
     "description": "OSF stream management",
+    "version": "3.0.0",
     "type": "library",
     "homepage": "https://github.com/osflab/stream",
     "license": "AGPL-3.0-or-later",
