--- a/src/Config/composer.json
+++ b/src/Config/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "osflab/config",
     "description": "OSF config component",
+    "version": "3.0.0",
     "type": "library",
     "homepage": "https://github.com/osflab/config",
     "license": "AGPL-3.0-or-later",
