--- a/src/Exception/composer.json
+++ b/src/Exception/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "osflab/exception",
     "description": "OSF standardized exceptions",
-    "version": "3.0.0",
+    "version": "3.0.1-dev",
     "type": "library",
     "homepage": "https://github.com/osflab/exception",
     "license": "AGPL-3.0-or-later",
@@ -19,40 +19,40 @@
         "php": "^7.1.0"
     },
     "require-dev": {
-        "osflab/test": "~3.0.0"
+        "osflab/test": "~3.0.1"
     },
     "provide": {
-        "osflab/application": "3.0.0",
-        "osflab/bean": "3.0.0",
-        "osflab/cache": "3.0.0",
-        "osflab/config": "3.0.0",
-        "osflab/container": "3.0.0",
-        "osflab/controller": "3.0.0",
-        "osflab/crypt": "3.0.0",
-        "osflab/db": "3.0.0",
-        "osflab/device": "3.0.0",
-        "osflab/doc-maker": "3.0.0",
-        "osflab/filter": "3.0.0",
-        "osflab/form": "3.0.0",
-        "osflab/generator": "3.0.0",
-        "osflab/helper": "3.0.0",
-        "osflab/image": "3.0.0",
-        "osflab/log": "3.0.0",
-        "osflab/navigation": "3.0.0",
-        "osflab/office": "3.0.0",
-        "osflab/pdf": "3.0.0",
-        "osflab/safety": "3.0.0",
-        "osflab/session": "3.0.0",
-        "osflab/stream": "3.0.0",
-        "osflab/validator": "3.0.0",
-        "osflab/view": "3.0.0"
+        "osflab/application": "3.0.1",
+        "osflab/bean": "3.0.1",
+        "osflab/cache": "3.0.1",
+        "osflab/config": "3.0.1",
+        "osflab/container": "3.0.1",
+        "osflab/controller": "3.0.1",
+        "osflab/crypt": "3.0.1",
+        "osflab/db": "3.0.1",
+        "osflab/device": "3.0.1",
+        "osflab/doc-maker": "3.0.1",
+        "osflab/filter": "3.0.1",
+        "osflab/form": "3.0.1",
+        "osflab/generator": "3.0.1",
+        "osflab/helper": "3.0.1",
+        "osflab/image": "3.0.1",
+        "osflab/log": "3.0.1",
+        "osflab/navigation": "3.0.1",
+        "osflab/office": "3.0.1",
+        "osflab/pdf": "3.0.1",
+        "osflab/safety": "3.0.1",
+        "osflab/session": "3.0.1",
+        "osflab/stream": "3.0.1",
+        "osflab/validator": "3.0.1",
+        "osflab/view": "3.0.1"
     },
     "suggest": {
-        "osflab/container": "~3.0.0",
-        "osflab/controller": "~3.0.0",
-        "osflab/log": "~3.0.0",
-        "osflab/view": "~3.0.0",
-        "osflab/application": "~3.0.0"
+        "osflab/container": "~3.0.1",
+        "osflab/controller": "~3.0.1",
+        "osflab/log": "~3.0.1",
+        "osflab/view": "~3.0.1",
+        "osflab/application": "~3.0.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
