--- a/src/Bean/composer.json
+++ b/src/Bean/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "osflab/bean",
     "description": "OSF bean component",
-    "version": "3.0.0",
+    "version": "3.0.1-dev",
     "type": "library",
     "homepage": "https://github.com/osflab/bean",
     "license": "AGPL-3.0-or-later",
@@ -17,16 +17,16 @@
     },
     "require": {
         "php": "^7.1.0",
-        "osflab/stream": "~3.0.0",
-        "osflab/exception": "~3.0.0"
+        "osflab/stream": "~3.0.1",
+        "osflab/exception": "~3.0.1"
     },
     "provide": {
-        "osflab/pdf": "3.0.0"
+        "osflab/pdf": "3.0.1"
     },
     "suggest": {
-        "osflab/crypt": "~3.0.0",
-        "osflab/container": "~3.0.0",
-        "osflab/doc-maker": "~3.0.0"
+        "osflab/crypt": "~3.0.1",
+        "osflab/container": "~3.0.1",
+        "osflab/doc-maker": "~3.0.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
