--- a/src/Config/composer.json
+++ b/src/Config/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "osflab/config",
     "description": "OSF config component",
-    "version": "3.0.0",
+    "version": "3.0.1-dev",
     "type": "library",
     "homepage": "https://github.com/osflab/config",
     "license": "AGPL-3.0-or-later",
@@ -17,15 +17,15 @@
     },
     "require": {
         "php": "^7.1.0",
-        "osflab/exception": "~3.0.0",
-        "osflab/stream": "~3.0.0"
+        "osflab/exception": "~3.0.1",
+        "osflab/stream": "~3.0.1"
     },
     "require-dev": {
-        "osflab/test": "~3.0.0"
+        "osflab/test": "~3.0.1"
     },
     "suggest": {
-        "osflab/form": "~3.0.0",
-        "osflab/db": "~3.0.0"
+        "osflab/form": "~3.0.1",
+        "osflab/db": "~3.0.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
