--- a/src/Console/composer.json
+++ b/src/Console/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "osflab/console",
     "description": "OSF simple unit test component",
-    "version": "3.0.0",
+    "version": "3.0.1-dev",
     "type": "library",
     "homepage": "https://github.com/osflab/console",
     "license": "AGPL-3.0-or-later",
@@ -19,11 +19,11 @@
         "php": "^7.1.0"
     },
     "require-dev": {
-        "osflab/test": "~3.0.0"
+        "osflab/test": "~3.0.1"
     },
     "provide": {
-        "osflab/controller": "3.0.0",
-        "osflab/test": "3.0.0"
+        "osflab/controller": "3.0.1",
+        "osflab/test": "3.0.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
