--- a/src/Controller/composer.json
+++ b/src/Controller/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "osflab/controller",
     "description": "OSF controller component",
-    "version": "3.0.0",
+    "version": "3.0.1-dev",
     "type": "library",
     "homepage": "https://github.com/osflab/controller",
     "license": "AGPL-3.0-or-later",
@@ -17,22 +17,22 @@
     },
     "require": {
         "php": "^7.1.0",
-        "osflab/console": "~3.0.0",
-        "osflab/application": "~3.0.0",
-        "osflab/generator": "~3.0.0",
-        "osflab/stream": "~3.0.0",
-        "osflab/container": "~3.0.0",
-        "osflab/exception": "~3.0.0"
+        "osflab/console": "~3.0.1",
+        "osflab/application": "~3.0.1",
+        "osflab/generator": "~3.0.1",
+        "osflab/stream": "~3.0.1",
+        "osflab/container": "~3.0.1",
+        "osflab/exception": "~3.0.1"
     },
     "require-dev": {
-        "osflab/test": "~3.0.0"
+        "osflab/test": "~3.0.1"
     },
     "provide": {
-        "osflab/application": "3.0.0",
-        "osflab/navigation": "3.0.0"
+        "osflab/application": "3.0.1",
+        "osflab/navigation": "3.0.1"
     },
     "suggest": {
-        "osflab/view": "~3.0.0",
+        "osflab/view": "~3.0.1",
         "zendframework/zend-db": "2.9.2"
     },
     "minimum-stability": "dev",
