--- a/src/Stream/composer.json
+++ b/src/Stream/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "osflab/stream",
     "description": "OSF stream management",
-    "version": "3.0.0",
+    "version": "3.0.1-dev",
     "type": "library",
     "homepage": "https://github.com/osflab/stream",
     "license": "AGPL-3.0-or-later",
@@ -21,31 +21,31 @@
         "soundasleep/html2text": "0.5.0",
         "patchwork/utf8": "1.3.1",
         "symfony/yaml": "3.4.4",
-        "osflab/exception": "~3.0.0",
-        "osflab/crypt": "~3.0.0",
-        "osflab/container": "~3.0.0"
+        "osflab/exception": "~3.0.1",
+        "osflab/crypt": "~3.0.1",
+        "osflab/container": "~3.0.1"
     },
     "require-dev": {
-        "osflab/test": "~3.0.0"
+        "osflab/test": "~3.0.1"
     },
     "provide": {
-        "osflab/bean": "3.0.0",
-        "osflab/config": "3.0.0",
-        "osflab/controller": "3.0.0",
-        "osflab/db": "3.0.0",
-        "osflab/doc-maker": "3.0.0",
-        "osflab/filter": "3.0.0",
-        "osflab/form": "3.0.0",
-        "osflab/generator": "3.0.0",
-        "osflab/helper": "3.0.0",
-        "osflab/log": "3.0.0",
-        "osflab/navigation": "3.0.0",
-        "osflab/pdf": "3.0.0",
-        "osflab/validator": "3.0.0",
-        "osflab/view": "3.0.0"
+        "osflab/bean": "3.0.1",
+        "osflab/config": "3.0.1",
+        "osflab/controller": "3.0.1",
+        "osflab/db": "3.0.1",
+        "osflab/doc-maker": "3.0.1",
+        "osflab/filter": "3.0.1",
+        "osflab/form": "3.0.1",
+        "osflab/generator": "3.0.1",
+        "osflab/helper": "3.0.1",
+        "osflab/log": "3.0.1",
+        "osflab/navigation": "3.0.1",
+        "osflab/pdf": "3.0.1",
+        "osflab/validator": "3.0.1",
+        "osflab/view": "3.0.1"
     },
     "suggest": {
-        "osflab/cache": "~3.0.0",
+        "osflab/cache": "~3.0.1",
         "ext-yaml": "For better performances"
     },
     "minimum-stability": "dev",
